@@ -96,7 +96,8 @@ DSD_Gaussians <- function(k=2, d=2, mu, sigma, p, separation=0.2,
 get_points.DSD_Gaussians <- function(x, n=1, 
     outofpoints=c("stop", "warn", "ignore"), 
     cluster = FALSE, class = FALSE, ...) {
-  
+  .nodots(...)
+
   clusterOrder <- sample(x=c(1:x$k), 
     size=n, 
     replace=TRUE, 
