@@ -1,6 +1,9 @@
 Changes in version 1.1-2 (xx/xx/15)
     * evaluate checks if DSD has cluster labels for external evaluation measures.
     * DSD_mlbenchmarkGenerator now shuffles data points
+    * DSC_ReadCSV gaines arguments skip and header
+    * DSC_DStream: number of grids N can now be fixed by the user
+    * DSC_tNN: uses now SOM-style micro-cluster update
 
 Changes in version 1.1-1 (01/15/15)
     * DSC_DStream: fixed bug with removing too many sporadic grids
